src/style.css
*{
    box-sizing: border-box;
    margin: 0;
    padding: 0;
}

body{
    min-width: 350px;
    min-height: 300px;
    max-width: 350px;
    font-family: 'Lato', sans-serif;
}

.headerbox{
    background-color: rgb(66, 133, 244);
    border-top-left-radius: 4px;
    border-top-right-radius: 4px;
    border-bottom-left-radius: 4px;
    border-bottom-right-radius: 4px;
    margin-top: 4px;
    margin-bottom: 4px;
    text-align: center;
    color: white;

}

.header-modified{
    background-color:rgb(25,50,76);
}

.body{
    background-color:rgb(25,50,76);
}

.surroundbox{
    min-width: 300px;
    min-height: 300px;
    position: relative;
    padding: 0 5px;
    padding-bottom: 0;
}

.box{
    background-color: rgb(243, 242, 244);
}

.messages{
    overflow-y: auto;
    height:250px;
}

.mynewmessage{
    text-align: right;
    margin-right: 0.5rem;
    background-color: #e0e0e0;
    width: auto;
    max-width: 50%;
    float: right;
    clear: both;
    overflow-wrap: break-word;
    position: relative;
    padding: 0.5rem;
    margin-top: 0.5rem;
    border-radius: 0.5rem 0.5rem;
    border-top-right-radius: 0;
}

.mynewmessage:before{
    content: '';
    position: absolute;
    border-color: transparent transparent transparent black;
    border-width: 5px 0 5px 5px;
    border-style: solid;
    right: -5px;
    top: 0.5px;
    border-radius: 20%;
}

.mynewmessage:after{
    content: '';
    position: absolute;
    border-color: transparent transparent transparent #e0e0e0;
    border-width: 5px 0 5px 5px;
    border-style: solid;
    right: -4.5px;
    top: 0.3px;
    border-radius: 20%;
    float: right;
    clear: both;
}

.mynewmessage p{
    display: inline;
    padding: 1rem;
}

.susinewmessage{
    text-align: left;
    margin-left: 0.3rem;
    padding: 0.5rem;
    margin-top: 0.5rem;
    width:auto;
    max-width: 50%;
    float: left;
    clear: both;
    overflow-wrap: break-word;
    background-color: #fff;
    position: relative;
    border-radius: 0.5rem 0.5rem;
    border-top-left-radius: 0;
}

.susinewmessage:before{
    content: '';
    position: absolute;
    border-color: transparent black transparent transparent;
    border-width: 5px 5px 5px 0;
    border-style: solid;
    left: -5px;
    top: 0.5px;
    border-radius: 20%;
}

.susinewmessage:after{
    content: '';
    position: absolute;
    border-color: transparent #fff transparent transparent;
    border-width: 5px 5px 5px 0;
    border-style: solid;
    left: -4.5px;
    top: 0.3px;
    border-radius: 20%;
}

.susinewmessage p{
    display: inline;
    padding: 1rem;
}

.send{
    position: absolute;
    bottom: 0;
}

.button{
    margin-left : 15px;
    border: none;
    color:rgb(66,133,244);
}

.susi-img{
    border:solid 0.2em;
    height: 200px;
    width: 150px;
}

.textarea:active,.textarea:focus,.textarea:hover{
    border-color: rgb(66, 133, 244);   
}
#susi-logo{
    float:center;
    margin-left: 0px;
    padding-top: 6px;
    width: 100px;
    height: auto;
}

.fieldmod{
    background-color:rgb(25,50,76);
}

.butmod{
    background-color:rgb(25,50,76);
}

.icon{
    margin-left: 15px;
    margin-right: 15px;
}


#setting{
    float:left;
    padding:5px;
    color:white;
}
.textarea{
    max-width:125%;
    width:118%;
    margin-bottom:5px;
}

.textarea-mod{
    background-color:rgb(25,50,76);
    border: 0;
    color: #0ad5c1;
}

.time{
    font-size:10px;
}

.switch {
  position: relative;
  display: inline-block;
  width: 35px;
  height: 22px;
}

.darkform{
    background-color: rgb(25,50,76);
}

.icon-mod{
    color: silver;
    background-color: rgb(25,50,76);
}

.icon1-mod{
    color: silver;
    background-color: rgb(25,50,76);
}

.message-dark        {
    background-color:rgba(25,147,147,.2);
    color: #0ad5c1;
}

.message-susi-dark        {
    background-color:rgba(25,147,147,.2);
    color: #0ec879;
}

.box-modified{
    background-color: rgb(25,50,76);
}

.switch input {display:none;}

/* The slider */
.theme{
    float:right;
    padding: 5px;
}

.slider {
  position: absolute;
  cursor: pointer;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-color: #ccc;
  -webkit-transition: .4s;
  transition: .4s;
}

.slider:before {
  position: absolute;
  content: "";
  height: 20px;
  width: 20px;
  left: 1px;
  bottom: 1px;
  background-color: white;
  -webkit-transition: .4s;
  transition: .4s;
}

input:checked + .slider {
  background-color: #2196F3;
}

input:focus + .slider {
  box-shadow: 0 0 1px #2196F3;
}

input:checked + .slider:before {
  transform: translateX(16px);
}

/* Rounded sliders */
.slider.round {
  border-radius: 34px;
}

.slider.round:before {
  border-radius: 50%;
}

.micmodal {
    width:100%;
    z-index: 1;
    display: none;
    background-color: white;
    position: absolute;
}

.active{
    display: block;
}

.micmodal-content{
    text-align: center;
}

